--- a/app/src/main/res/layout/activity_checkin2_.xml
+++ b/app/src/main/res/layout/activity_checkin2_.xml
@@ -55,7 +55,6 @@
                         android:drawableStart="@drawable/icon_tanggal"
                         android:gravity="center"
                         android:textAlignment="center"
-                        android:textStyle="bold"
                         android:textColor="@color/grey_900"/>
 
                 </RelativeLayout>
@@ -103,7 +102,6 @@
                 android:orientation="vertical">
 
                 <LinearLayout
-                    android:id="@+id/ly_tahun_checkin2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
@@ -112,6 +110,7 @@
                     android:orientation="vertical">
 
                     <LinearLayout
+                        android:id="@+id/ly_tahun_checkin2"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/paddingMedium"
@@ -146,7 +145,9 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
                                 android:drawableStart="@drawable/icon_tanggal"
-                                android:gravity="center" />
+                                android:gravity="center"
+                                android:textAlignment="center"
+                                android:textColor="@color/grey_900"/>
 
                         </RelativeLayout>
 
