--- a/app/src/main/res/layout/activity_checkin3_.xml
+++ b/app/src/main/res/layout/activity_checkin3_.xml
@@ -52,6 +52,7 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/ly_btnPart_checkin3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="end"
@@ -156,12 +157,16 @@
 
             </android.support.v7.widget.CardView>
 
-
             <android.support.v7.widget.RecyclerView
-                android:id="@+id/recyclerView_checkin3"
+                android:id="@+id/recyclerView_part_checkin3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp" />
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/recyclerView_jasalain_checkin3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
 
             <CheckBox
                 android:id="@+id/cb_estimasi_checkin3"
