--- a/app/src/main/res/layout/activity_daftar_jual_part_.xml
+++ b/app/src/main/res/layout/activity_daftar_jual_part_.xml
@@ -31,7 +31,11 @@
                     android:layout_width="match_parent"
                     android:layout_height="70dp"
                     android:text="TOTAL"
+                    android:layout_gravity="center"
+                    android:gravity="center"
                     android:padding="10dp"
+                    android:textColor="@color/grey_900"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                     android:textSize="20sp" />
 
             </android.support.v7.widget.CardView>
