--- a/app/src/main/res/layout/activity_detail_jual_part_.xml
+++ b/app/src/main/res/layout/activity_detail_jual_part_.xml
@@ -18,12 +18,14 @@
             android:padding="5dp">
 
             <android.support.design.widget.TextInputLayout
+                android:id="@+id/tl_hpp"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="5dp"
                 android:layout_marginRight="10dp"
+                android:visibility="gone"
                 android:hint="HPP">
 
                 <EditText
@@ -31,7 +33,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="text"
-                    android:enabled="false"
                     android:textSize="14sp" />
 
             </android.support.design.widget.TextInputLayout>
@@ -50,6 +51,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textSize="14sp"
+                    android:enabled="false"
                     android:inputType="numberDecimal" />
 
             </android.support.design.widget.TextInputLayout>
