--- a/app/src/main/res/layout/activity_penyesuain.xml
+++ b/app/src/main/res/layout/activity_penyesuain.xml
@@ -25,14 +25,6 @@
 
                 <include layout="@layout/toolbar" />
 
-                <ImageView
-                    android:id="@+id/imgBarcode_penyesuaian"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="right|center_vertical"
-                    android:padding="5dp"
-                    app:srcCompat="@drawable/scan"
-                    tools:ignore="RtlHardcoded" />
 
             </FrameLayout>
 
@@ -77,6 +69,30 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="10dp"
+                    android:background="@drawable/border_solid"
+                    android:gravity="center"
+                    android:orientation="horizontal"
+                    android:padding="10dp">
+
+                    <TextView
+                        android:id="@+id/textView35"
+                        android:layout_width="150dp"
+                        android:layout_weight="1"
+                        android:layout_height="wrap_content"
+                        android:text="LOKASI" />
+
+                    <Spinner
+                        android:id="@+id/sp_lokasi_penyesuaian"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:entries="@array/lokasi_penyesuaian" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:background="@drawable/border_solid"
@@ -117,21 +133,41 @@
 
                 </android.support.design.widget.TextInputLayout>
 
-                <android.support.design.widget.TextInputLayout
-                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:hint="USER SAKSI">
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
 
-                    <android.support.design.widget.TextInputEditText
-                        android:id="@+id/et_userSaksi_penyesuaian"
-                        android:layout_width="match_parent"
+                    <android.support.design.widget.TextInputLayout
+                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:enabled="false"
-                        android:textSize="14sp" />
+                        android:textAlignment="center">
 
-                </android.support.design.widget.TextInputLayout>
+                        <EditText
+                            android:id="@+id/et_userSaksi_penyesuaian"
+                            android:layout_width="280dp"
+                            android:layout_height="wrap_content"
+                            android:hint="USER SAKSI"
+                            android:enabled="false"
+                            android:maxLength="10"
+                            android:textSize="14sp" />
+
+                    </android.support.design.widget.TextInputLayout>
+
+
+                    <ImageView
+                        android:id="@+id/imgBarcode_penyesuaian"
+                        android:layout_width="50dp"
+                        android:layout_height="match_parent"
+                        android:layout_marginStart="15dp"
+                        android:padding="5dp"
+                        android:src="@drawable/scan"
+                        android:tint="@color/colorPrimary" />
+
+                </LinearLayout>
+
+
 
             </LinearLayout>
 
