--- a/app/src/main/res/layout/activity_stock_opname.xml
+++ b/app/src/main/res/layout/activity_stock_opname.xml
@@ -17,14 +17,7 @@
 
             <include layout="@layout/toolbar" />
 
-            <ImageView
-                android:id="@+id/imgBarcode_stockOpname"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="right|center_vertical"
-                android:padding="5dp"
-                app:srcCompat="@drawable/scan"
-                tools:ignore="RtlHardcoded" />
+
 
         </FrameLayout>
     </android.support.design.widget.AppBarLayout>
@@ -42,48 +35,21 @@
             android:layout_marginRight="10dp"
             android:orientation="vertical">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@drawable/border_solid"
-                android:padding="10dp"
-                android:gravity="center"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/textView35"
-                    android:layout_width="150dp"
-                    android:layout_height="wrap_content"
-                    android:text="LOKASI" />
-
-                <Spinner
-                    android:id="@+id/sp_lokasi_stockOpname"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:entries="@array/lokasi_penempatan_part"
-                    android:layout_weight="1" />
-
-            </LinearLayout>
-
-
             <android.support.design.widget.TextInputLayout
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
                 android:textAlignment="center">
 
                 <EditText
-                    android:id="@+id/et_noFolder_stockOpname"
+                    android:id="@+id/et_namaPart_stockOpname"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_gravity="center"
                     android:enabled="false"
-                    android:hint="NO. FOLDER"
+                    android:hint="NAMA PART"
                     android:textSize="14sp" />
 
             </android.support.design.widget.TextInputLayout>
-
 
             <android.support.design.widget.TextInputLayout
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
@@ -111,11 +77,55 @@
                 android:textAlignment="center">
 
                 <EditText
-                    android:id="@+id/et_namaPart_stockOpname"
+                    android:id="@+id/et_merkPart_stockOpname"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_gravity="center"
                     android:enabled="false"
-                    android:hint="NAMA PART"
+                    android:hint="MERK PART"
+                    android:textSize="14sp" />
+
+            </android.support.design.widget.TextInputLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="5dp"
+                android:background="@drawable/border_solid"
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:padding="10dp">
+
+                <TextView
+                    android:id="@+id/textView35"
+                    android:layout_width="150dp"
+                    android:layout_height="wrap_content"
+                    android:text="LOKASI" />
+
+                <Spinner
+                    android:id="@+id/sp_lokasi_stockOpname"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:entries="@array/lokasi_penempatan_part" />
+
+            </LinearLayout>
+
+
+            <android.support.design.widget.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:textAlignment="center">
+
+                <EditText
+                    android:id="@+id/et_noFolder_stockOpname"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:enabled="false"
+                    android:hint="NO. FOLDER"
                     android:textSize="14sp" />
 
             </android.support.design.widget.TextInputLayout>
@@ -138,24 +148,42 @@
 
             </android.support.design.widget.TextInputLayout>
 
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
             <android.support.design.widget.TextInputLayout
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
                 android:textAlignment="center">
 
                 <EditText
                     android:id="@+id/et_jumlahakhir_stockOpname"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center"
-                    android:hint="JUMLAH AKHIR"
+                    android:layout_width="280dp"
+                    android:layout_height="wrap_content"
+                    android:hint="STOCK"
                     android:inputType="number"
                     android:maxLength="10"
                     android:textSize="14sp" />
 
             </android.support.design.widget.TextInputLayout>
+
+
+            <ImageView
+                android:id="@+id/imgBarcode_stockOpname"
+                android:layout_width="50dp"
+                android:layout_height="match_parent"
+                android:layout_marginStart="15dp"
+                android:padding="5dp"
+                android:src="@drawable/scan"
+                android:tint="@color/colorPrimary" />
+
+        </LinearLayout>
+
+
 
             <Button
                 android:id="@+id/btn_simpan_stockOpname"
