--- a/app/src/main/res/layout/activity_atur_frekwensi_discount.xml
+++ b/app/src/main/res/layout/activity_atur_frekwensi_discount.xml
@@ -40,23 +40,41 @@
 
             </LinearLayout>
 
-            <android.support.design.widget.TextInputLayout
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp">
+                android:layout_marginTop="15dp"
+                android:layout_marginBottom="@dimen/paddingMedium"
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:paddingStart="@dimen/paddingMedium"
+                android:paddingEnd="@dimen/paddingMedium">
 
-                <EditText
-                    android:id="@+id/et_frekwensi_freDisc"
-                    android:layout_width="match_parent"
+                <TextView
+                    android:id="@+id/txttittle9"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:hint="FREKWENSI"
-                    android:inputType="number"
-                    android:maxLength="5"
-                    android:maxLines="1"
-                    android:textSize="14sp" />
+                    android:layout_weight="3"
+                    android:text="PEKERJAAN"
+                    android:textColor="@color/grey_900"
+                    android:textSize="12sp"
+                    android:textStyle="bold" />
 
-            </android.support.design.widget.TextInputLayout>
+                <RelativeLayout
+                    android:layout_width="0dp"
+                    android:layout_height="34dp"
+                    android:layout_weight="6"
+                    android:background="@drawable/background_edittext">
+
+                    <Spinner
+                        android:id="@+id/sp_frekwensi"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:textAlignment="center" />
+
+                </RelativeLayout>
+
+            </LinearLayout>
 
             <android.support.design.widget.TextInputLayout
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
