--- a/app/src/main/res/layout/activity_atur_lokasi_part.xml
+++ b/app/src/main/res/layout/activity_atur_lokasi_part.xml
@@ -281,9 +281,10 @@
 
                         <Spinner
                             android:id="@+id/sp_noFolder_part"
-                            android:layout_width="match_parent"
+                            android:layout_width="fill_parent"
                             android:layout_height="match_parent"
-                            android:textAlignment="center" />
+                            android:textAlignment="center"
+                            android:ellipsize="marquee"/>
 
                     </RelativeLayout>
 
@@ -291,16 +292,7 @@
 
             </LinearLayout>
 
-            <Button
-                android:id="@+id/btn_simpan_lokasi_part"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="end"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="10dp"
-                android:background="@drawable/btn_rounded_accent"
-                android:text="SIMPAN"
-                android:textColor="@android:color/white" />
+            <include layout="@layout/layout_btn_simpan_hapus" />
 
         </LinearLayout>
 
